--- a/app/src/main/res/layout/fragment_backup_eos.xml
+++ b/app/src/main/res/layout/fragment_backup_eos.xml
@@ -1,26 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="0dp"
+    android:layout_height="0dp"
     android:orientation="vertical"
     android:background="?android:windowBackground"
     android:clickable="true">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="?attr/actionBarSize"
         app:navigationIcon="@drawable/ic_back"
         app:title="@string/Backup_DisplayTitle" />
 
     <androidx.core.widget.NestedScrollView
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_weight="1">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:paddingTop="16dp"
             android:paddingBottom="36dp">
@@ -28,7 +28,7 @@
             <TextView
                 android:id="@+id/accountName"
                 style="@style/Subhead2"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="32dp"
                 android:gravity="fill"
                 android:layout_marginStart="24dp"
@@ -43,7 +43,7 @@
 
             <io.horizontalsystems.views.InputKeyTextView
                 android:id="@+id/eosAccount"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
                 android:layout_marginEnd="24dp"
@@ -54,7 +54,7 @@
             <TextView
                 android:id="@+id/privateKey"
                 style="@style/Subhead2"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="32dp"
                 android:layout_marginTop="16dp"
                 android:gravity="fill"
@@ -70,7 +70,7 @@
 
             <io.horizontalsystems.views.InputKeyTextView
                 android:id="@+id/eosActivePrivateKey"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
                 android:layout_marginEnd="24dp"
@@ -81,7 +81,7 @@
             <TextView
                 android:id="@+id/copyWarning"
                 style="@style/Subhead2"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
                 android:layout_marginStart="24dp"
@@ -109,7 +109,7 @@
     <Button
         android:id="@+id/buttonClose"
         style="@style/ButtonPrimaryYellow"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
