--- a/app/src/main/res/layout/fragment_backup_words.xml
+++ b/app/src/main/res/layout/fragment_backup_words.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/fragmentContainer"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="0dp"
+    android:layout_height="0dp"
     android:background="?android:windowBackground"
     android:clickable="true" />
