--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -2,30 +2,30 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="0dp"
+    android:layout_height="0dp"
     android:background="?android:windowBackground"
     android:clickable="true">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="?attr/actionBarSize"
         app:navigationIcon="@drawable/ic_back"
         app:title="@string/Notification_Title" />
 
     <androidx.core.widget.NestedScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginTop="?attr/actionBarSize">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content">
 
             <io.horizontalsystems.views.SettingsViewSwitch
                 android:id="@+id/switchNotification"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
                 app:bottomBorder="true"
@@ -37,7 +37,7 @@
             <TextView
                 android:id="@+id/textWarning"
                 style="@style/Subhead2"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="12dp"
@@ -63,7 +63,7 @@
             <TextView
                 android:id="@+id/textDescription"
                 style="@style/Subhead2"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="8dp"
@@ -88,7 +88,7 @@
 
             <FrameLayout
                 android:id="@+id/deactivateAll"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="44dp"
                 android:layout_marginTop="32dp"
                 android:layout_marginBottom="32dp"
@@ -97,7 +97,7 @@
                 app:layout_constraintTop_toBottomOf="@id/notifications">
 
                 <View
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="0.5dp"
                     android:layout_gravity="top"
                     android:background="@color/steel_20"
@@ -105,7 +105,7 @@
 
                 <TextView
                     android:id="@+id/deactivateAllText"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginStart="16dp"
@@ -113,7 +113,7 @@
                     android:textColor="@color/red_d" />
 
                 <View
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="0.5dp"
                     android:layout_gravity="bottom"
                     android:background="@color/steel_20"
