--- a/app/src/main/res/layout/fragment_rates.xml
+++ b/app/src/main/res/layout/fragment_rates.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/coinRatesRecyclerView"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="0dp"
+    android:layout_height="0dp"
     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
     tools:itemCount="3"
     tools:listitem="@layout/view_holder_coin_rate" />
