--- a/app/src/main/res/layout/partial_transaction_info.xml
+++ b/app/src/main/res/layout/partial_transaction_info.xml
@@ -5,7 +5,7 @@
     tools:showIn="@layout/transaction_info_bottom_sheet">
 
     <View
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="?ColorLawrence"
         app:layout_constraintTop_toTopOf="parent"
