--- a/app/src/main/res/layout/view_holder_coin_rate.xml
+++ b/app/src/main/res/layout/view_holder_coin_rate.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@drawable/lockscreen_clickable_background"
-    android:layout_width="match_parent"
+    android:layout_width="0dp"
     android:layout_height="60dp">
 
     <ImageView
