--- a/app/src/main/res/layout/view_holder_privacy_settings_section_title.xml
+++ b/app/src/main/res/layout/view_holder_privacy_settings_section_title.xml
@@ -1,13 +1,13 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="0dp"
     android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/titleText"
         style="@style/Subhead1"
         tools:text="@string/SettingsPrivacy_CommunicationSettingsTitle"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="38dp"
