--- a/app/src/main/res/layout/view_send_fee.xml
+++ b/app/src/main/res/layout/view_send_fee.xml
@@ -2,14 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:clipChildren="false"
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/feeError"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="34dp"
         android:ellipsize="end"
         android:layout_marginTop="12dp"
@@ -21,13 +21,13 @@
 
     <LinearLayout
         android:id="@+id/feeLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:clipChildren="false"
         android:orientation="vertical">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="12dp"
             android:layout_marginTop="12dp">
@@ -92,7 +92,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/txDurationLayout"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="12dp">
 
@@ -124,7 +124,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/txSpeedLayout"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="44dp">
 
             <View
@@ -175,7 +175,7 @@
 
         <io.horizontalsystems.seekbar.FeeSeekBar
             android:id="@+id/customFeeSeekBar"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="24dp"
             android:background="@null"
             android:max="200"
